<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CadastrarTIActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/novoTI"
        android:textColor="#A00"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:text="@string/ti"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/campoHoras"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.68"
            android:ems="7"
            android:inputType="numberDecimal" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textViewHoras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horas"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/atividade"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp"
        android:textStyle="bold" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <EditText
	        android:id="@+id/campoAtividade"
	        android:layout_width="127dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.65"
	        android:ems="10"
	        android:inputType="text" />

	    <Button
	        android:id="@+id/btnConfirm"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="cadastrarAtividade"
	        android:text="@string/ok" />
	</LinearLayout>

	<RelativeLayout 
	    android:layout_width="match_parent"
    	android:layout_height="match_parent">

    </RelativeLayout>
</LinearLayout>